# idna-cli

./: CHANGELOG.md  Cargo.toml  README.md  ascii.txt  unicode.txt
src/: lib.rs
t/: README.md
