[package]
name = "idna-cli"
version = "0.3.0"
edition = "2024"
description = "Encode/decode Unicode domain names to/from IDNA ASCII"
license = "MIT"
repository = "https://github.com/qtfkwk/idna-cli"

[dependencies]
clap = { version = "4.5.46", features = ["derive", "wrap_help"] }
clap-cargo = "0.17.0"
idna = "1.1.0"
indexmap = { version = "2.11.0", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
