[package]
name = "idna-cli"
version = "0.3.1"
edition = "2024"
description = "Encode/decode Unicode domain names to/from IDNA ASCII"
license = "MIT"
repository = "https://github.com/qtfkwk/idna-cli"

[dependencies]
clap = { version = "4.5.50", features = ["derive", "wrap_help"] }
clap-cargo = "0.18.3"
idna = "1.1.0"
indexmap = { version = "2.12.0", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
